--- a/api/.env
+++ b/api/.env
@@ -1,3 +1,11 @@
+# .......................IMPORTANTE..!!!!
+# Es muy importante que este archivo sea incluido en .gitignore
+# antes de apuntar a tu nuevo repositorio
+#
+# This file must be include in .gitignore
+# before setting the new repository url
+
+
 #Port
 PORT=3000
 
