--- a/api/package.json
+++ b/api/package.json
@@ -1,7 +1,7 @@
 {
   "name": "api",
   "version": "1.0.0",
-  "description": "backend fulbit",
+  "description": "backend",
   "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js"
