docker configurado OK

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,27 @@
 version: '3'
 
 services:
-  api: 
-      container_name: backendapi
-      restart: always
-      build: .
-      ports:
-          - "3001:3000"
-        
   db:
       container_name: mysqldb
       image: mysql
+      env_file:
+      - .env/.mysql.env
       volumes:
           - ./sql-data/db:/var/lib/mysql
       ports: 
           - "3307:3306"
+  api:
+      depends_on: 
+          - db 
+      container_name: backendapi
+      restart: always
+      build:
+        context: .
+        dockerfile: Dockerfile
+      command: bash -c 'while !</dev/tcp/db/3306; do sleep 1; done; npm run dev'
+      ports:
+          - "3001:3000"
       env_file:
-          - ./api/.env
+      - ./api/.env
+      volumes:
+          - ./:/app
