--- a/api/package.json
+++ b/api/package.json
@@ -16,11 +16,12 @@
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
+    "mqtt": "^4.3.7",
     "mysql2": "^2.3.3",
     "sequelize": "^6.14.1",
     "sequelize-cli": "^6.4.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.19"
   }
 }
