--- a/frontend/ARAN/tsconfig.app.json
+++ b/frontend/ARAN/tsconfig.app.json
@@ -3,7 +3,10 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": [],
+    "paths": {
+      "environment/*":["src/environments/*"],
+    }
   },
   "files": [
     "src/main.ts",
