--- a/frontend/ARAN/angular.json
+++ b/frontend/ARAN/angular.json
@@ -30,7 +30,10 @@
                 "output": "./svg"
               }
             ],
-            "styles": ["src/theme/variables.scss", "src/global.scss"],
+            "styles": [
+              "src/theme/variables.scss", 
+              "src/global.scss"
+            ],
             "scripts": [],
             "aot": false,
             "vendorChunk": true,
@@ -148,7 +151,8 @@
   "cli": {
     "schematicCollections": [
       "@ionic/angular-toolkit"
-    ]
+    ],
+    "analytics": "2706220d-054d-4d79-ad41-39de7e08f92b"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
