--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,12 +25,16 @@ services:
     #     - ./api/.env
     #     volumes:
     #         - ./:/app
-    # mosquitto:
-    #     image: eclipse-mosquitto
-    #     network_mode: host
-    #     volumes:
-    #     - ./config:/mosquitto/config
-    #     - ./data:/mosquitto/data
-    #     - ./log:/mosquitto/log
-    #     #command: bash -c 'killall mosquitto'
-    #     restart: unless-stopped
+    mosquitto:
+        image: eclipse-mosquitto
+        container_name: mosquittobroker
+        ports:
+            - '1883:1883'
+        network_mode: host
+        volumes:
+        - './mqtt/etc/mosquitto.conf:/mosquitto/config/mosquitto.conf'
+        - './mqtt/etc/mqttusers:/mosquitto/config/mqttusers'
+        - './mqtt/data:/mosquitto/data'
+        - './mqtt/log:/mosquitto/log'
+        #command: bash -c 'killall mosquitto'
+        restart: unless-stopped
