--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,3 +37,30 @@ services:
         - './mqtt/data:/mosquitto/data'
         - './mqtt/log:/mosquitto/log'
         restart: unless-stopped
+    
+    # Definir el servicio de la aplicación Ionic
+    frontend-app:
+        # Utilizar la imagen construida a partir del archivo Dockerfile
+        # build: .
+        container_name: frontend-app
+        build:
+             context: .
+             dockerfile: Dockerfile-frontend
+        # Mapear el puerto 80 del contenedor al puerto 8080 del host
+        ports:
+        - "8080:80"
+
+  # Definir el servicio de Nginx
+    nginx:
+    # Utilizar la imagen oficial de Nginx
+        image: nginx
+    # Copiar la configuración de Nginx al contenedor
+        volumes:
+        - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    # Enlazar el servicio de Nginx con el servicio de la aplicación Ionic
+        depends_on:
+        - ionic-app
+    # Mapear el puerto 80 del contenedor al puerto 80 del host
+        ports:
+        - "80:80"
+
