--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
         container_name: mysqldb
         image: mysql
         env_file:
-        - .env/.mysql.env
+        - .env_mysql/.mysql.env
         volumes:
             - ./sql-data/db:/var/lib/mysql
         ports: 
