--- a/nginx.conf
+++ b/nginx.conf
@@ -11,8 +11,18 @@ server {
         index index.html;
     }
 
-    #Configurar el proxy inverso para redirigir las solicitudes a la aplicación Ionic
-    location /api/ {
+   # Configurar la ubicación de la aplicación frontend
+    location /app {
+        proxy_pass http://frontend-app/;
+    }
+
+    # Configurar la ubicación de la aplicación frontend
+    location /front {
+        proxy_pass http://frontend-app:8080/;
+    }
+
+    #Configurar el proxy inverso para redirigir las solicitudes a la aplicación backend
+    location /api {
         proxy_pass http://backendapi:3000/;
     }
 }
