errores en deploy ionic. borrar esta config y dejar sin nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,28 +1,76 @@
 server {
-    # Escuchar en el puerto 80
     listen 80;
-
-    # Definir el nombre de dominio o la dirección IP de tu servidor
     server_name localhost;
 
-    # Configurar la ubicación de los archivos estáticos de la aplicación
     location / {
         root /usr/src/ionic-app/www;
         index index.html;
     }
 
-   # Configurar la ubicación de la aplicación frontend
     location /app {
-        proxy_pass http://frontend-app/;
+        proxy_pass http://frontend-app:8080/;
     }
 
-    # Configurar la ubicación de la aplicación frontend
     location /front {
         proxy_pass http://frontend-app:8080/;
     }
 
-    #Configurar el proxy inverso para redirigir las solicitudes a la aplicación backend
+    location /fronta {
+        proxy_pass http://frontend-app/;
+    }
+
+    location /frontb {
+        proxy_pass http://frontend-app:4200/;
+    }
+
     location /api {
         proxy_pass http://backendapi:3000/;
     }
+
+    location /ionic {
+        proxy_pass http://localhost:8080/;
+    }
+
+    location /test {
+        proxy_pass http://localhost:8888/;
+    }
+
+    location /testa {
+        proxy_pass http://localhost:4200/;
+    }
+
+    location /testb {
+        proxy_pass http://localhost:80/;
+    }
+    location /testc {
+        proxy_pass http://localhost:8080/;
+    }
 }
+# server {
+#     # Escuchar en el puerto 80
+#     listen 80;
+
+#     # Definir el nombre de dominio o la dirección IP de tu servidor
+#     server_name localhost;
+
+#     # Configurar la ubicación de los archivos estáticos de la aplicación
+#     location / {
+#         root /usr/src/ionic-app/www;
+#         index index.html;
+#     }
+
+#    # Configurar la ubicación de la aplicación frontend
+#     location /app {
+#         proxy_pass http://frontend-app/;
+#     }
+
+#     # Configurar la ubicación de la aplicación frontend
+#     location /front {
+#         proxy_pass http://frontend-app:8080/;
+#     }
+
+#     #Configurar el proxy inverso para redirigir las solicitudes a la aplicación backend
+#     location /api {
+#         proxy_pass http://backendapi:3000/;
+#     }
+# }
