--- a/Dockerfile-frontend
+++ b/Dockerfile-frontend
@@ -1,5 +1,5 @@
  # Utilizar la imagen oficial de Node.js como base
-FROM node:18-alpine
+FROM node:18-alpine as builder
 
 # Establecer el directorio de trabajo en /app
 #WORKDIR /app
@@ -25,3 +25,7 @@ EXPOSE 80 4200
 
 # Ejecutar el comando para iniciar la aplicación
 CMD ["npm", "start"]
+
+FROM nginx:1.23.4-alpine
+
+COPY --from=builder /usr/src/ionic-app/www /usr/share/nginx/html
