--- a/nginx.conf
+++ b/nginx.conf
@@ -1,49 +1,16 @@
 server {
     listen 80;
     server_name localhost;
+    root /usr/share/nginx/html;
+    index index.html;
 
     location / {
-        root /usr/src/ionic-app/www;
-        index index.html;
+        try_files $uri $uri/ /index.html;
     }
 
-    location /app {
-        proxy_pass http://frontend-app:8080/;
-    }
-
-    location /front {
-        proxy_pass http://frontend-app:8080/;
-    }
-
-    location /fronta {
-        proxy_pass http://frontend-app/;
-    }
-
-    location /frontb {
-        proxy_pass http://frontend-app:4200/;
-    }
-
-    location /api {
-        proxy_pass http://backendapi:3000/;
-    }
-
-    location /ionic {
-        proxy_pass http://localhost:8080/;
-    }
-
-    location /test {
-        proxy_pass http://localhost:8888/;
-    }
-
-    location /testa {
-        proxy_pass http://localhost:4200/;
-    }
-
-    location /testb {
-        proxy_pass http://localhost:80/;
-    }
-    location /testc {
-        proxy_pass http://localhost:8080/;
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /usr/share/nginx/html;
     }
 }
 # server {
