--- a/Dockerfile-frontend
+++ b/Dockerfile-frontend
@@ -1,5 +1,5 @@
  # Utilizar la imagen oficial de Node.js como base
-FROM node:18-alpine as builder
+FROM node:18-alpine AS builder
 
 # Establecer el directorio de trabajo en /app
 #WORKDIR /app
@@ -20,12 +20,26 @@ RUN npm install
 # Compilar la aplicación
 RUN ionic build --prod
 
-# Exponer el puerto 80 para que pueda ser utilizado por Nginx
-EXPOSE 80 4200
-
-# Ejecutar el comando para iniciar la aplicación
-CMD ["npm", "start"]
-
+##
+# Luego, empaquetar la aplicación en una imagen de Nginx
 FROM nginx:1.23.4-alpine
 
+# Eliminar el archivo de configuración por defecto de Nginx
+RUN rm -rf /etc/nginx/conf.d/default.conf
+
+# Copiar la configuración de Nginx personalizada
+COPY nginx.conf /etc/nginx/conf.d/
+
+# Copiar la aplicación construida desde la imagen de Node.js
 COPY --from=builder /usr/src/ionic-app/www /usr/share/nginx/html
+
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
+##
+
+# Exponer el puerto 80 para que pueda ser utilizado por Nginx
+#EXPOSE 80
+
+# Ejecutar el comando para iniciar la aplicación
+#CMD ["npm", "start"]
