--- a/nginx.conf
+++ b/nginx.conf
@@ -8,6 +8,18 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+    location /api {
+        proxy_pass http://backendapi:3000/;
+    }
+
+    location /db {
+        proxy_pass http://mysqldb:3306/;
+    }
+
+    location /mosquitto {
+        proxy_pass http://mysqldb:1883/;
+    }
+
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
         root /usr/share/nginx/html;
