--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,4 +46,16 @@ services:
             dockerfile: Dockerfile-frontend
         ports:
             - "80:80"
+    messenger:
+         container_name: messenger
+         restart: always
+         build:
+             context: .
+             dockerfile: Dockerfile-messenger
+         ports:
+             - "3003:3003"
+         env_file:
+         - ./api/.env
+         volumes:
+             - ./:/messenger
 
