--- a/Dockerfile-messenger
+++ b/Dockerfile-messenger
@@ -2,9 +2,9 @@ FROM node:18
 
 # ENV NODE_ENV=development#production
 
-RUN mkdir -p /usr/src/app
+RUN mkdir -p /usr/src/appmessenger
 
-WORKDIR /usr/src/app
+WORKDIR /usr/src/appmessenger
 
 COPY api-whatsapp-ts/package*.json ./
 
