--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon -L api/server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Lic. Pablo Arancibia",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
